themes/style/timeline.css
.timeline h1,
.timeline h2,
.timeline p,
.timeline li{
	font-family: 'Source Sans Pro', sans-serif !important;
}

.csstransforms .slide h1,
.timeline h1{
	position: relative!important;
	top:50px;
	z-index: 9999;
	font-size: 2.5em;
	padding: 0px !important;
}
.timeline h2{
	font-size: 1.5em;
	text-align:center;
	-webkit-box-reflect: none !important;
}
.timeline .slide pre {
	top: 50px;
	padding-left: 30px !important;
}
.timeline .slide blockquote{
	position: relative;
	top:20px;
	font-size: 1em !important;
	width:50%;
}
.cssreflections .timeline .slide h1{
	-webkit-box-reflect: below -0.556em -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.3, transparent), color-stop(0.7, rgba(255, 255, 255, 0.1)), to(transparent)) !important;
}
.cssreflections .timeline .slide h2{
	text-align:center;
	-webkit-box-reflect: below -0.256em -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.3, transparent), color-stop(0.7, rgba(255, 255, 255, 0.1)), to(transparent)) !important;
}
.timeline .insterstitial{
	background-color:lightblue;  
	font-size:2em  
}
.timeline .insterstitial h1{
	position: absolute !important;
	top: 50% !important;
	bottom: auto !important; 
}
.cssreflections .timeline .insterstitial h1{
	-webkit-box-reflect: none !important;
	padding:0px;
}

.timeline ul{
	top: 50px;
	left: 20%;
	position: relative;
	width: 80%;
}
.timeline #flashtimeline {
	position:relative;
	top:20px;
	width: 630px;
	margin: 0px 0px 20px 0px;
	border: solid 5px lightblue;
	text-align: center;
	background-color:white;
}
.timeline .links-section{
	top:120px;
	text-align:center;
	position:relative;
	width: 50%;
	margin: 0px auto;
}
.timeline .quicknote{
	text-align:center;
}
.timeline iframe::-webkit-scrollbar {  
	display: none;
}

.timeline iframe,
.timeline .image-cradle img {
	border: solid 5px lightblue;
}
.timeline .image-cradle {
	text-align:center;
}
.timeline iframe,
.timeline .image-cradle{
	position:relative;
	top:40px;    
}
.timeline iframe{
	width:1000px;
	height:600px;    
}

.timeline .wider iframe{
	width:1200px;    
}

.timeline .narrower iframe{
	width:800px;    
}

.timeline .fancy-transform {
	display:block;
	position:relative;
	top:200px;
	left: 30%;
	width:40%;
	height:200px;
	font-size: 0.5em;

	-webkit-transform: scale(1,1) rotate( 0deg );
	-webkit-transition-duration: 0.5s;
}

.timeline .fancy-transform:hover {
	top:120px;

	-webkit-transform: scale(1.5,1.5) rotate( 10deg );
	-webkit-transition-duration: 0.5s;
}

.timeline article#monitoring section {
	font-size: 12px !important;
	float: left;
	padding-left: 10px;
}

.timeline article#monitoring section:first-of-type {
	font-size: 16px !important;
	width: 600px;
}

.timeline article#monitoring section:last-of-type {
	width: 600px;
}

.timeline article#monitoring code div.highlightable:hover{  
	-webkit-transform: scale(1.5);
	-webkit-transition-duration: 0.5s;
	background-color: #ffffff;
	box-shadow: #CCC 5px 5px 20px 2px;
	padding-left: 30px !important; 
}

.timeline article#monitoring code div.highlightable:hover span {
	color: #ff0000 !important;
}


.timeline article#unittest section {
	font-size: 12px !important;
	float: left;
	padding-left: 10px;
}

.timeline article#unittest section:first-of-type {
	font-size: 16px !important;
	width: 600px;
}

.timeline article#unittest section:last-of-type {
	width: 600px;
}

.timeline article#unittest code div.highlightable:hover{  
    -webkit-transform: scale(1.5);
	-webkit-transition-duration: 0.5s;
	background-color: #ffffff;
	box-shadow: #CCC 5px 5px 20px 2px;
	padding-left: 30px !important; 
}

.timeline article#unittest code div.highlightable:hover span {
    color: #ff0000 !important;
}





.timeline .no-top-offset{
	top: 5px;
}

